--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 /* Bootstrap 4 text input with search icon */
-
 /* default sizes: 
     padding-right: 2.375rem;
     top: -2.375rem;
@@ -8,67 +7,183 @@
     line-height: 2.375rem; 
 */
 body {
-    padding: 30px;
+  padding: 30px;
 }
+
 .has-search .form-control {
-    padding-right: 3rem;
+  padding-right: 3rem;
 }
 
 .has-search .form-control-feedback {
-    position: relative;
-    float: right;
-    z-index: 2;
-    display: block;
-    
-    top: -3rem;
-    width: 3rem;
-    height: 3rem;
-    line-height: 3rem;
-    font-size: 1.5rem;
-    text-align: center;
-    pointer-events: none;
-    color: black;
+  position: relative;
+  float: right;
+  z-index: 2;
+  display: block;
+  top: -3rem;
+  width: 3rem;
+  height: 3rem;
+  line-height: 3rem;
+  font-size: 1.5rem;
+  text-align: center;
+  pointer-events: none;
+  color: black;
 }
 
-
 .card-img-top {
-    background-color: #aaa;
-    width: 100%;
-    height: 150px;
+  background-color: #aaa;
+  width: 100%;
+  height: 150px;
 }
 
 .card {
-    
-    padding: 0;
+  padding: 0;
 }
 
-.logo {
+@media screen and (min-width: 768px) {
+  .logo {
     width: 20vw;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .logo {
+    width: 50vw;
+  }
 }
 
 .logo-container {
-    display: flex;
-    justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.datalists::-webkit-input-placeholder {
+  color: white;
+}
+
+.datalists:-ms-input-placeholder {
+  color: white;
+}
+
+.datalists::-ms-input-placeholder {
+  color: white;
 }
 
 .datalists::placeholder {
-    color: white;
+  color: white;
 }
 
 #results {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .hashtag {
-    margin: 10px 10px 10px 0;
-    padding: 15px;
+  margin: 10px 10px 10px 0;
+  padding: 15px;
 }
 
 .hashtag::after {
-    content: "x";
-    border: 2px solid white;
-    border-radius: 100%;
-    padding: 0px 6px 3px 6px;
-    text-align: center;
-    margin-left: 15px;
+  content: "x";
+  border: 2px solid white;
+  border-radius: 100%;
+  padding: 0px 6px 3px 6px;
+  text-align: center;
+  margin-left: 15px;
 }
+
+#search-stuff-ustensils:focus {
+  border: none;
+  outline: 2px solid lightgrey;
+}
+
+/* Design dropdowns */
+.dropDowns span {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.search-stuff::-webkit-input-placeholder {
+  color: lightgrey;
+}
+
+.search-stuff:-ms-input-placeholder {
+  color: lightgrey;
+}
+
+.search-stuff::-ms-input-placeholder {
+  color: lightgrey;
+}
+
+.search-stuff::placeholder {
+  color: lightgrey;
+}
+
+.search-stuff, .search-stuff:focus {
+  border: none;
+  background: transparent;
+  width: 100%;
+  color: white;
+  padding: 16px;
+  margin: 0;
+}
+
+.search-stuff:focus, .search-stuff:focus-within {
+  outline: 2px solid lightgrey;
+}
+
+.dropdown-stuff {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown-stuff .dropbtn-stuff {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: inherit;
+  margin: 0;
+}
+
+.dropdown-content-stuff {
+  display: none;
+  z-index: 1;
+}
+
+.dropdown-content-stuff .header {
+  padding: 16px;
+  color: white;
+}
+
+.dropdown-stuff:hover .dropdown-content-stuff {
+  display: block;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: auto;
+  height: auto;
+}
+
+.column span {
+  float: none;
+  display: block;
+  text-align: left;
+}
+
+.btn-primary:hover {
+  background-color: #0d6efd;
+}
+
+.column span:hover {
+  background-color: grey;
+}
+/*# sourceMappingURL=style.css.map */
