--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,17 @@ body {
   background-color: #aaa;
   width: 100%;
   height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 25%;
+     object-position: 50% 25%;
 }
 
 .card {
+  margin: 0;
   padding: 0;
+  -webkit-box-shadow: 1px 2px 4px #e8e8e8;
+          box-shadow: 1px 2px 4px #e8e8e8;
 }
 
 @media screen and (min-width: 768px) {
