--- a/css/style.scss
+++ b/css/style.scss
@@ -36,11 +36,14 @@ body {
     background-color: #aaa;
     width: 100%;
     height: 150px;
+    object-fit: cover;
+    object-position: 50% 25%;
 }
 
 .card {
-    
+    margin: 0;
     padding: 0;
+    box-shadow: 1px 2px 4px hsl(0, 0%, 91%);
 }
 
 @media screen and (min-width:768px) {
