--- a/css/style.scss
+++ b/css/style.scss
@@ -45,6 +45,43 @@ body {
     padding: 0;
     box-shadow: 1px 2px 4px hsl(0, 0%, 91%);
     background-color: rgb(231,231,231);
+    animation: shadowOut 0.5s forwards;
+}
+
+.card:hover {
+    cursor: pointer;    
+    animation: shadowIn 0.15s forwards;
+}
+
+@keyframes shadowIn {
+    from {
+        box-shadow: 1px 2px 4px hsl(0, 0%, 91%);
+        transform: translateY(0em);
+    }
+    to {
+        box-shadow: 
+        1px 2px 4px hsl(0, 0%, 91%),
+        2px 4px 4px hsl(0, 0%, 91%),
+        3px 6px 4px hsl(0, 0%, 91%);
+        transform: translateY(-0.25em);
+        background-color: white;
+    }
+}
+
+@keyframes shadowOut {
+    from {
+        box-shadow: 
+        1px 2px 4px hsl(0, 0%, 91%),
+        2px 4px 4px hsl(0, 0%, 91%),
+        3px 6px 4px hsl(0, 0%, 91%);
+        transform: translateY(-0.25em);
+        background-color: white;
+    }
+
+    to {
+        box-shadow: 1px 2px 4px hsl(0, 0%, 91%);
+        transform: translateY(0em);
+    }
 }
 
 .card-title.duration {
